@@ -33,7 +33,7 @@
     <h1>ECHI Converter</h1>
     <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/echi-converter"; return false'>
       <p>Get Version</p>
-      <a href="http://rubyforge.org/projects/echi-converter" class="numbers">0.0.1</a>
+      <a href="http://rubyforge.org/projects/echi-converter" class="numbers">0.0.2</a>
     </div>
     <h1>&#x2192; &#8216;echi-converter&#8217;</h1>
 
@@ -47,7 +47,7 @@
 	<h2>Status</h2>
 
 
-	<p>This is the initial alpha release that will under go extensive testing in the coming weeks.  Therefore it is recommended to wait for version 0.0.2 before any production use.</p>
+	<p>This is the initial alpha release that will under go extensive testing in the coming weeks.  Therefore it is recommended to wait for version 0.1.0 before any production use.</p>
 
 
 	<h2>Features</h2>
@@ -206,7 +206,7 @@
 
 	<p>Comments are welcome. Send an email to <a href="mailto:jason@goecke.net">jason [at] goecke.net</a>.</p>
     <p class="coda">
-      <a href="mailto:drnicwilliams@gmail.com">Dr Nic</a>, 24th July 2007<br>
+      <a href="mailto:drnicwilliams@gmail.com">Dr Nic</a>, 2nd August 2007<br>
       Theme extended from <a href="http://rb2js.rubyforge.org/">Paul Battley</a>
     </p>
 </div>
